name:           HistoryGraph
version:        0.1.0.0
Cabal-Version:  >=1.10
license:        GPL-3
license-file:	License
copyright:      Copyright (c) 2016 Isaac Reilly
category:       Data
stability:      experimental
build-type:     Custom
author:         Isaac Reilly <isaac.g.reilly@gmail.com>
maintainer:     Isaac Reilly <isaac.g.reilly@gmail.com>
bug-reports:    https://github.com/Super-Fluid/history-graph/issues/
homepage:       TODO
synopsis:       Library for a tree of dependencies for editing and undo.
description:
        Record actions as nodes getting info from parents,
        move around in the tree to undo/redo, edit old actions
        and recalculate values, modify the structure of the graph.
        Also store a table of functions with String keys so that
        the history graph can be stored in a file.
extra-source-files:
Library
  hs-source-dirs: .
  ghc-options: -funbox-strict-fields -fexcess-precision
  extensions: 
  exposed-modules:
       HistoryGraph, 
       HistoryGraph.FunctionRegistry,
       HistoryGraph.Types
  other-extensions:    
        MultiWayIf, 
        LambdaCase, 
        TemplateHaskell
  other-modules:
  build-depends:
        base, 
        lens ,
        safe >=0.3 && <0.4, 
        template-haskell,
        containers >= 0.3.0.0,
        extra >= 1.4.3,
        errors >= 2.1.2,
        mtl >= 2.2.1
  default-language:    Haskell2010
source-repository head
  type:     git
  location: https://github.com/Super-Fluid/history-graph.git